# kibana-object-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/kibana-client/: Cargo.toml  README.md
crates/kibana-client/src/: error.rs  sync.rs
crates/kibana-client/src/client/: kibana.rs
crates/kibana-client/src/etl/: extract.rs  load.rs  pipeline.rs  transform.rs
crates/kibana-object-manager/: Cargo.toml
crates/kibana-object-manager/docs/: ARCHITECTURE.md  EXAMPLES.md  LIVE_TESTS.md  SPACES.md
crates/kibana-object-manager/dotenv/: localhost
crates/kibana-object-manager/scripts/: live-kibana-tests.sh
crates/kibana-object-manager/src/: cli.rs  lib.rs  main.rs  migration.rs
crates/kibana-object-manager/src/storage/: directory.rs  env.rs  git.rs  json_writer.rs  manifest.rs  mod.rs  ndjson.rs
crates/kibana-object-manager/src/transform/: field_dropper.rs  field_escaper.rs  integration_test.rs  managed_flag.rs  mod.rs  multiline_fields.rs  vega_spec.rs  yaml_formatter.rs
crates/kibana-object-manager/tests/: etl_integration.rs  live_kibana_integration.rs  migration_integration.rs  saved_objects_integration.rs  spaces_integration.rs  workflows_integration.rs
crates/kibana-object-manager/tests/common/: live_kibana.rs  mod.rs
crates/kibana-object-manager/tests/live/: docker-compose.yml
crates/kibana-sync/: Cargo.toml  README.md
crates/kibana-sync/src/: bundle.rs  error.rs  fs.rs  json5.rs  lib.rs  sync.rs  test_support.rs
crates/kibana-sync/src/client/: auth.rs  kibana.rs  mod.rs
crates/kibana-sync/src/etl/: extract.rs  load.rs  pipeline.rs  transform.rs
crates/kibana-sync/src/kibana/: dependencies.rs  mod.rs
crates/kibana-sync/src/kibana/agents/: extractor.rs  loader.rs  mod.rs
crates/kibana-sync/src/kibana/saved_objects/: extractor.rs  loader.rs  mod.rs
crates/kibana-sync/src/kibana/skills/: extractor.rs  loader.rs  manifest.rs  mod.rs  storage.rs
crates/kibana-sync/src/kibana/spaces/: extractor.rs  loader.rs  manifest.rs
crates/kibana-sync/src/kibana/tools/: extractor.rs  loader.rs  manifest.rs
crates/kibana-sync/src/kibana/workflows/: extractor.rs  loader.rs  manifest.rs  mod.rs
docs/: EXAMPLES.md  LIVE_TESTS.md  MIGRATION.md  QUICK_REFERENCE.md  SPACES.md  USER_GUIDE.md
dotenv/: localhost
manifest/: tools.yml
openspec/: config.yml  project.md
openspec/changes/add-spaces-list/: tasks.md
openspec/changes/complete-workflows-support/: design.md
openspec/changes/embedded-assets/: design.md  proposal.md  tasks.md
openspec/changes/extract-kibana-client-crate/: design.md  proposal.md  tasks.md
openspec/changes/include-dependencies/: proposal.md  tasks.md
openspec/changes/kibana-versions/: design.md  proposal.md  tasks.md
openspec/changes/migrate-space-awareness/: tasks.md
openspec/changes/skills-api-support/: design.md  proposal.md  tasks.md
openspec/changes/tools-api-support/: tasks.md
openspec/specs/agents/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/concurrency/: spec.md
openspec/specs/include-dependencies/: spec.md
openspec/specs/kibana-client/: spec.md
openspec/specs/kibana-sync/: spec.md
openspec/specs/push/: spec.md
openspec/specs/skills/: spec.md
openspec/specs/tools/: spec.md
openspec/specs/workspace-library-packaging/: spec.md
skills/kibob/: SKILL.md
skills/kibob/agents/: openai.yaml
skills/kibob/references/: kibob-commands.md
skills/publish-kibob/: SKILL.md
skills/publish-kibob/agents/: openai.yaml
skills/publish-kibob/references/: release-checklist.md
skills/publish-kibob/scripts/: update_homebrew_formula.py
src/: _kibana_object_manager.rs.old  authorizer.rs  bundler.rs  cli.rs  kibana_object_manager.rs  kibob  kibob.js  lib.rs  logger.js  main.rs  merger.rs  migration.rs  package.json  space_context.rs
src/_exporter_old/: directory.rs  file.rs  kibana.rs  mod.rs
src/_processor_old/: mod.rs
src/_processor_old/data/: merger.rs  mod.rs
src/_processor_old/kibana/: manifest.rs  mod.rs
src/_processor_old/kibana/agents/: mod.rs
src/_receiver_old/: directory.rs  file.rs  kibana.rs  mod.rs
src/client/: auth.rs  kibana.rs  mod.rs
src/etl/: extract.rs  load.rs  mod.rs  pipeline.rs  transform.rs
src/kibana/: dependencies.rs  mod.rs  mod.rs.bak
src/kibana/agents/: extractor.rs  extractor.rs.bak  loader.rs  loader.rs.bak  manifest.rs
src/kibana/saved_objects/: extractor.rs  extractor.rs.bak  loader.rs  loader.rs.bak  manifest.rs
src/kibana/spaces/: extractor.rs  loader.rs  loader.rs.bak  manifest.rs  mod.rs  mod.rs.bak
src/kibana/tools/: extractor.rs  extractor.rs.bak  loader.rs  loader.rs.bak  manifest.rs.bak
src/kibana/workflows/: extractor.rs  extractor.rs.bak  loader.rs  loader.rs.bak  manifest.rs
src/kibana_object_manager/: authorizer.rs  bundler.rs  exporter.rs  importer.rs  init.rs  initializer.rs  manifest.rs  merger.rs  objects.rs
src/storage/: directory.rs  env.rs  json_writer.rs  mod.rs  ndjson.rs
src/transform/: field_dropper.rs  field_escaper.rs  integration_test.rs  managed_flag.rs  mod.rs  multiline_fields.rs  vega_spec.rs  yaml_formatter.rs
tests/: etl_integration.rs  live_kibana_integration.rs  migration_integration.rs  saved_objects_integration.rs  spaces_integration.rs  workflows_integration.rs
tests/common/: live_kibana.rs
tools/: observability.get_log_change_points.json  observability.get_metric_change_points.json  platform.core.cases.json  platform.core.execute_esql.json  platform.core.generate_esql.json  platform.core.get_document_by_id.json  platform.core.get_index_mapping.json  platform.core.get_workflow_execution_status.json  platform.core.index_explorer.json  platform.core.list_indices.json  platform.core.product_documentation.json  platform.core.search.json
(+74 files in other folders)
