[package]
name = "kibana-sync"
version = "0.2.1"
edition = "2024"
rust-version = "1.89"
authors = ["Ryan Eno"]
description = "Reusable Kibana sync library for saved objects, spaces, agents, tools, skills, and workflows"
license = "Apache-2.0"
repository = "https://github.com/VimCommando/kibana-object-manager"
homepage = "https://github.com/VimCommando/kibana-object-manager"
documentation = "https://docs.rs/kibana-sync"
readme = "README.md"
keywords = ["kibana", "elasticsearch", "client", "saved-objects", "sync"]
categories = ["api-bindings", "development-tools"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "../../LICENSE",
]

[dependencies]
base64 = "^0.22"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
semver = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
yaml_serde = "0.10.4"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
url = "^2.5.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
